# nbishop-net

./: .gitignore  CNAME  Cargo.toml  README.md  feed.rss  index.html  log-week-0000.html  log-week-0001.html  log-week-0002.html  log-week-0003.html  log-week-0004.html  log-week-0005.html  log-week-0006.html  log-week-0007.html  log-week-0008.html  log-week-0009.html  log-week-0010.html  log-week-0011.html  log-week-0012.html  log-week-0013.html  log-week-0014.html  log-week-0015.html  log-week-0016.html  log-week-0017.html  log-week-0018.html  log-week-0019.html  log-week-0020.html  log-week-0021.html  log-week-0022.html  log-week-0023.html  log-week-0024.html  log-week-0025.html  log-week-0026.html  log-week-0027.html  log-week-0028.html  log-week-0029.html  log-week-0030.html  log-week-0031.html  log-week-0032.html  log-week-0033.html  (+11 more)
.github/workflows/: ci.yaml  publish.yaml
content/: index.md  style.css
content/log/: week-0000.md  week-0001.md  week-0002.md  week-0003.md  week-0004.md  week-0005.md  week-0006.md  week-0007.md  week-0008.md  week-0009.md  week-0010.md  week-0011.md  week-0012.md  week-0013.md  week-0014.md  week-0015.md  week-0016.md  week-0017.md  week-0018.md  week-0019.md  week-0020.md  week-0021.md  week-0022.md  week-0023.md  week-0024.md  week-0025.md  week-0026.md  week-0027.md  week-0028.md  week-0029.md  week-0030.md  week-0031.md  week-0032.md  week-0033.md  week-0034.md
content/notes/: c2rust.md  cryptocurrency-bad.md  (+4 more)
css/: style.css
src/: credential_helper.sh  main.rs  publish.rs  render.rs
templates/: base.html  macros.md
