[package]
name = "nbishop-net"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
camino = "1.1.6"
command-run = "1.1.1"
comrak = "0.26.0"
fs-err = "3.0.0"
image = { version = "0.25.0", default-features = false, features = ["jpeg"] }
rayon = "1.7.0"
rss = "2.0.6"
serde = { version = "1.0.188", features = ["derive"] }
tera = "1.19.0"
time = { version = "0.3.28", features = ["formatting", "parsing"] }
walkdir = "2.3.3"
